# a_little_guy

./: Cargo.toml
assets/: drawing #1.psd  drawing #2 rev2.psd  drawing #2.psd  drawing #3.psd
src/: channels.rs  main.rs
src/graphics/: draw_state.rs  external_event.rs  mod.rs  model.rs  pipeline.rs  renderer.rs  texture.rs  uniforms.rs  vertex.rs  vertex_array.rs  window.rs
src/graphics/shaders/: shader.wgsl
src/logic/: components.rs  controls.rs  external_event_handler.rs  logic.rs  mod.rs  resources.rs  state_input_event.rs  systems.rs
src/logic/collision/: aabb.rs  collision_mesh.rs  mod.rs  ray.rs  triangle.rs  world_collision_mesh.rs
